// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Login component Render tests should hide login code related elements when login by code is disabled on application and application default login code =  1`] = `
<div>
  <div
    class="MuiBox-root css-6gpkta"
    data-testid="login-container-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
  >
    <div
      class="MuiBox-root css-38s0oi"
    >
      <div
        class="MuiBox-root css-1difu8q"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 css-5xirf-MuiTypography-root"
        >
          Login
        </h3>
        <div
          class="MuiTypography-root MuiTypography-body2 css-ec8wkj-MuiTypography-root"
        >
          If you already have a Njila account, enter your 
          <strong>
            email
          </strong>
           and &lt;1&gt;password&lt;/1&gt; to access it, or choose &lt;2&gt;Google&lt;/2&gt; to log in.
        </div>
      </div>
      <form
        class="MuiBox-root css-esqb5o"
        data-testid="login-form-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
      >
        <span />
        <span
          data-testid="reset-password-email-container"
        />
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation css-x4yg8e-MuiButtonBase-root-MuiButton-root"
          data-testid="login-button-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
          disabled=""
          style="margin-top: 26.4px;"
          tabindex="-1"
          type="submit"
        >
          Login
          <div
            class="MuiBox-root css-15jaqqs"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1rwg863-MuiSvgIcon-root"
              data-testid="ArrowForwardIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </div>
        </button>
      </form>
      <span
        data-testid="firebase-auth-container-f0324e97-83fd-49e6-95c3-1043751fa1db"
      />
    </div>
  </div>
</div>
`;

exports[`Testing Login component Render tests should hide login code related elements when login by code is disabled on application and application default login code = login-code-provided 1`] = `
<div>
  <div
    class="MuiBox-root css-6gpkta"
    data-testid="login-container-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
  >
    <div
      class="MuiBox-root css-38s0oi"
    >
      <div
        class="MuiBox-root css-1difu8q"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 css-5xirf-MuiTypography-root"
        >
          Login
        </h3>
        <div
          class="MuiTypography-root MuiTypography-body2 css-ec8wkj-MuiTypography-root"
        >
          If you already have a Njila account, enter your 
          <strong>
            email
          </strong>
           and &lt;1&gt;password&lt;/1&gt; to access it, or choose &lt;2&gt;Google&lt;/2&gt; to log in.
        </div>
      </div>
      <form
        class="MuiBox-root css-esqb5o"
        data-testid="login-form-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
      >
        <span />
        <span
          data-testid="reset-password-email-container"
        />
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation css-x4yg8e-MuiButtonBase-root-MuiButton-root"
          data-testid="login-button-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
          disabled=""
          style="margin-top: 26.4px;"
          tabindex="-1"
          type="submit"
        >
          Login
          <div
            class="MuiBox-root css-15jaqqs"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1rwg863-MuiSvgIcon-root"
              data-testid="ArrowForwardIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </div>
        </button>
      </form>
      <span
        data-testid="firebase-auth-container-f0324e97-83fd-49e6-95c3-1043751fa1db"
      />
    </div>
  </div>
</div>
`;

exports[`Testing Login component Render tests should show continue as guest if login code is enabled and application default code is set 1`] = `
<div>
  <div
    class="MuiBox-root css-6gpkta"
    data-testid="login-container-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
  >
    <div
      class="MuiBox-root css-38s0oi"
    >
      <div
        class="MuiBox-root css-1difu8q"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 css-5xirf-MuiTypography-root"
        >
          Login
        </h3>
        <div
          class="MuiTypography-root MuiTypography-body2 css-ec8wkj-MuiTypography-root"
        >
          If you already have a Njila account, enter your 
          <strong>
            email
          </strong>
           and &lt;1&gt;password&lt;/1&gt; to access it, or choose &lt;2&gt;Google&lt;/2&gt; to log in.
        </div>
      </div>
      <form
        class="MuiBox-root css-esqb5o"
        data-testid="login-form-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-569vpd-MuiButtonBase-root-MuiButton-root"
          data-testid="login-start-new-conversation-button-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
          tabindex="0"
          type="button"
        >
          Continue as Guest
        </button>
        <div
          aria-orientation="horizontal"
          class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren css-1ib53nm-MuiDivider-root"
          role="separator"
          style="width: 100%;"
        >
          <span
            class="MuiDivider-wrapper css-ev540k-MuiDivider-wrapper"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-1cbttgf-MuiTypography-root"
            >
              Or login to your account to continue
            </h6>
          </span>
        </div>
        <span />
        <span
          data-testid="reset-password-email-container"
        />
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation css-x4yg8e-MuiButtonBase-root-MuiButton-root"
          data-testid="login-button-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
          disabled=""
          style="margin-top: 26.4px;"
          tabindex="-1"
          type="submit"
        >
          Login
          <div
            class="MuiBox-root css-15jaqqs"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1rwg863-MuiSvgIcon-root"
              data-testid="ArrowForwardIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </div>
        </button>
      </form>
      <span
        data-testid="firebase-auth-container-f0324e97-83fd-49e6-95c3-1043751fa1db"
      />
    </div>
  </div>
</div>
`;

exports[`Testing Login component it should show login form successfully 1`] = `
<div
  class="MuiBox-root css-6gpkta"
  data-testid="login-container-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
>
  <div
    class="MuiBox-root css-38s0oi"
  >
    <div
      class="MuiBox-root css-1difu8q"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3 css-5xirf-MuiTypography-root"
      >
        Login
      </h3>
      <div
        class="MuiTypography-root MuiTypography-body2 css-ec8wkj-MuiTypography-root"
      >
        If you already have a Njila account, enter your 
        <strong>
          email
        </strong>
         and &lt;1&gt;password&lt;/1&gt; to access it, or choose &lt;2&gt;Google&lt;/2&gt; to log in.
      </div>
    </div>
    <form
      class="MuiBox-root css-esqb5o"
      data-testid="login-form-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
    >
      <span
        data-testid="login-form-300d373e-b913-4bd5-9045-3a28d490cf2c"
      />
      <div
        aria-orientation="horizontal"
        class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren css-1ib53nm-MuiDivider-root"
        role="separator"
        style="width: 100%;"
      >
        <span
          class="MuiDivider-wrapper css-ev540k-MuiDivider-wrapper"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1cbttgf-MuiTypography-root"
          >
            or
          </h6>
        </span>
      </div>
      <span />
      <span
        data-testid="reset-password-email-container"
      />
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation css-x4yg8e-MuiButtonBase-root-MuiButton-root"
        data-testid="login-button-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
        disabled=""
        style="margin-top: 26.4px;"
        tabindex="-1"
        type="submit"
      >
        Login
        <div
          class="MuiBox-root css-15jaqqs"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1rwg863-MuiSvgIcon-root"
            data-testid="ArrowForwardIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
            />
          </svg>
        </div>
      </button>
    </form>
    <span
      data-testid="firebase-auth-container-f0324e97-83fd-49e6-95c3-1043751fa1db"
    />
    <span
      data-testid="request-invitation-code-link-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
    />
  </div>
</div>
`;

exports[`Testing Login component should handle application login code 1`] = `
<div
  class="MuiBox-root css-6gpkta"
  data-testid="login-container-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
>
  <div
    class="MuiBox-root css-38s0oi"
  >
    <div
      class="MuiBox-root css-1difu8q"
    >
      <h3
        class="MuiTypography-root MuiTypography-h3 css-5xirf-MuiTypography-root"
      >
        Login
      </h3>
      <div
        class="MuiTypography-root MuiTypography-body2 css-ec8wkj-MuiTypography-root"
      >
        If you already have a Njila account, enter your 
        <strong>
          email
        </strong>
         and &lt;1&gt;password&lt;/1&gt; to access it, or choose &lt;2&gt;Google&lt;/2&gt; to log in.
      </div>
    </div>
    <form
      class="MuiBox-root css-esqb5o"
      data-testid="login-form-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-569vpd-MuiButtonBase-root-MuiButton-root"
        data-testid="login-start-new-conversation-button-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
        tabindex="0"
        type="button"
      >
        Continue as Guest
      </button>
      <div
        aria-orientation="horizontal"
        class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren css-1ib53nm-MuiDivider-root"
        role="separator"
        style="width: 100%;"
      >
        <span
          class="MuiDivider-wrapper css-ev540k-MuiDivider-wrapper"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1cbttgf-MuiTypography-root"
          >
            Or login to your account to continue
          </h6>
        </span>
      </div>
      <span />
      <span
        data-testid="reset-password-email-container"
      />
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation css-x4yg8e-MuiButtonBase-root-MuiButton-root"
        data-testid="login-button-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
        disabled=""
        style="margin-top: 26.4px;"
        tabindex="-1"
        type="submit"
      >
        Login
        <div
          class="MuiBox-root css-15jaqqs"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1rwg863-MuiSvgIcon-root"
            data-testid="ArrowForwardIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
            />
          </svg>
        </div>
      </button>
    </form>
    <span
      data-testid="firebase-auth-container-f0324e97-83fd-49e6-95c3-1043751fa1db"
    />
  </div>
</div>
`;

exports[`Testing Login component should remove registration link if registration is disabled 1`] = `
<div>
  <div
    class="MuiBox-root css-6gpkta"
    data-testid="login-container-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
  >
    <div
      class="MuiBox-root css-38s0oi"
    >
      <div
        class="MuiBox-root css-1difu8q"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 css-5xirf-MuiTypography-root"
        >
          Login
        </h3>
        <div
          class="MuiTypography-root MuiTypography-body2 css-ec8wkj-MuiTypography-root"
        >
          If you already have a Njila account, enter your 
          <strong>
            email
          </strong>
           and &lt;1&gt;password&lt;/1&gt; to access it, or choose &lt;2&gt;Google&lt;/2&gt; to log in.
        </div>
      </div>
      <form
        class="MuiBox-root css-esqb5o"
        data-testid="login-form-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
      >
        <span
          data-testid="login-form-300d373e-b913-4bd5-9045-3a28d490cf2c"
        />
        <div
          aria-orientation="horizontal"
          class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren css-1ib53nm-MuiDivider-root"
          role="separator"
          style="width: 100%;"
        >
          <span
            class="MuiDivider-wrapper css-ev540k-MuiDivider-wrapper"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-1cbttgf-MuiTypography-root"
            >
              or
            </h6>
          </span>
        </div>
        <span />
        <span
          data-testid="reset-password-email-container"
        />
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation css-x4yg8e-MuiButtonBase-root-MuiButton-root"
          data-testid="login-button-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
          disabled=""
          style="margin-top: 26.4px;"
          tabindex="-1"
          type="submit"
        >
          Login
          <div
            class="MuiBox-root css-15jaqqs"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1rwg863-MuiSvgIcon-root"
              data-testid="ArrowForwardIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </div>
        </button>
      </form>
      <span
        data-testid="firebase-auth-container-f0324e97-83fd-49e6-95c3-1043751fa1db"
      />
      <span
        data-testid="request-invitation-code-link-7ce9ba1f-bde0-48e2-88df-e4f697945cc4"
      />
    </div>
  </div>
</div>
`;
